--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   rive: any
   flutter_animator: any
+  cached_network_image: any
 
 dev_dependencies:
   flutter_test:
